# essential-node

./: Cargo.toml  README.md  big-bang-block.yml  big-bang.yml  flake.nix  overlay.nix  result  shell.nix
.github/workflows/: ci.yml  release.yml
crates/genesis/: Cargo.toml
crates/genesis/contracts/: deploy_contract.pnt
crates/genesis/src/: deploy_contract.rs  lib.rs  utils.rs
crates/genesis/src/deploy_contract/: check_exists.rs  check_max.rs  constrain_keys.rs  constraint.rs  delta_contract.rs  find_contract.rs  found_predicates.rs  generate_hashes.rs  max_predicates.rs  read_contract_addr.rs  read_predicate_addr.rs  state.rs  tests.rs  unique_hashes.rs  validate_contract.rs
crates/genesis/src/deploy_contract/check_max/: tests.rs
crates/genesis/src/deploy_contract/constrain_keys/: tests.rs
crates/genesis/src/deploy_contract/constraint/: tests.rs
crates/genesis/src/deploy_contract/delta_contract/: tests.rs
crates/genesis/src/deploy_contract/find_contract/: tests.rs
crates/genesis/src/deploy_contract/found_predicates/: tests.rs
crates/genesis/src/deploy_contract/generate_hashes/: tests.rs
crates/genesis/src/deploy_contract/max_predicates/: tests.rs
crates/genesis/src/deploy_contract/read_contract_addr/: tests.rs
crates/genesis/src/deploy_contract/state/: tests.rs
crates/genesis/src/deploy_contract/unique_hashes/: tests.rs
crates/genesis/src/utils/: constraint.rs  state.rs
crates/node/: Cargo.toml  README.md
crates/node-api/: Cargo.toml  README.md
crates/node-api/src/: endpoint.rs  lib.rs  main.rs
crates/node-api/tests/: endpoints.rs  util.rs
crates/node-cli/: Cargo.toml  README.md
crates/node-cli/src/: lib.rs  main.rs  tests.rs
crates/node-db/: Cargo.toml  README.md
crates/node-db-sql/: Cargo.toml  README.md
crates/node-db-sql/sql/create/: block.sql  block_solution.sql  block_solution_set.sql  contract.sql  contract_predicate.sql  contract_progress.sql  dec_var.sql  deployed_contract.sql  failed_block.sql  failed_solution.sql  finalized_block.sql  mutation.sql  pred_data.sql  predicate.sql  pub_var.sql  solution.sql  solution_data.sql  solution_set.sql  state.sql  state_progress.sql  validation_progress.sql
crates/node-db-sql/sql/insert/: block.sql  block_solution.sql  block_solution_set.sql  contract.sql  contract_predicate.sql  contract_progress.sql  dec_var.sql  deployed_contract.sql  failed_block.sql  failed_solution.sql  finalize_block.sql  mutation.sql  pred_data.sql  predicate.sql  pub_var.sql  solution.sql  solution_data.sql  solution_set.sql  state_progress.sql  validation_progress.sql
crates/node-db-sql/sql/query/: get_big_bang_block_address.sql  get_block.sql  get_block_header.sql  get_block_number.sql  get_contract.sql  get_contract_predicates.sql  get_contract_progress.sql  get_contract_salt.sql  get_latest_block_number.sql  get_latest_finalized_block_address.sql  get_latest_finalized_block_hash.sql  get_next_block_address.sql  get_parent_block_address.sql  get_predicate.sql  get_solution.sql  get_solution_data.sql  get_solution_dec_vars.sql  get_solution_mutations.sql  get_solution_pred_data.sql  get_state.sql  get_state_progress.sql  get_validation_progress.sql  list_blocks.sql  list_blocks_by_time.sql  list_contracts.sql  list_contracts_by_time.sql  list_failed_blocks.sql  list_failed_solutions.sql  list_unchecked_blocks.sql  query_state_at_block_finalized.sql  query_state_at_block_multiverse.sql  query_state_at_optimistic.sql  query_state_at_solution_finalized.sql  query_state_at_solution_multiverse.sql  query_state_at_solution_set_finalized.sql  query_state_block_address.sql
crates/node-db-sql/sql/update/: delete_state.sql  state.sql
crates/node-db-sql/src/: lib.rs
crates/node-db/src/: error.rs  lib.rs  pool.rs  query_at.rs  query_range.rs
crates/node-db/src/query_at/: finalized.rs  multiverse.rs
crates/node-db/src/query_range/: address.rs  finalized.rs
crates/node-db/tests/: create.rs  insert.rs  pool.rs  query.rs  subscribe.rs  update.rs  util.rs
crates/node-types/: Cargo.toml  big-bang.yml
crates/node-types/src/: action.rs  block.rs  block_notify.rs  lib.rs
crates/node-types/src/block/: addr.rs  tests.rs
crates/node-types/tests/: big-bang.rs
crates/node/src/: db.rs  derive_state.rs  error.rs  handle.rs  handles.rs  lib.rs  merkle.rs  node_handle.rs  state.rs  state_derivation.rs  state_handle.rs  stream.rs  test_utils.rs  validate.rs  validation.rs
crates/node/src/derive_state/: tests.rs
crates/node/src/handles/: node.rs  state.rs  validation.rs
crates/node/src/merkle/: tests.rs
crates/node/src/state/: tests.rs
crates/node/src/state_derivation/: tests.rs
crates/node/src/stream/: tests.rs
crates/node/src/validate/: tests.rs
crates/node/src/validation/: tests.rs
crates/node/tests/: db.rs  node.rs  run.rs  stream.rs  util.rs
crates/relayer/: Cargo.toml  README.md
crates/relayer/src/: error.rs  handle.rs  lib.rs  sync.rs  tests.rs
crates/relayer/src/handle/: tests.rs
crates/relayer/src/sync/: contract_stream.rs  error.rs  streams.rs  tests.rs
crates/relayer/tests/: integration.rs
crates/rusqlite-pool/: Cargo.toml  README.md
crates/rusqlite-pool/src/: lib.rs  tokio.rs
crates/rusqlite-pool/tests/: sync.rs  tokio.rs
crates/validate/: Cargo.toml
crates/validate/src/: error.rs  lib.rs
pkgs/: essential-node-api.nix  essential-node.nix
shells/: pint.nix  shell.nix
