[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
repository = "https://github.com/essential-contributions/essential-node"

[workspace.dependencies]
essential-hash = "0.2.0"
essential-types = "0.2.0"
futures = "0.3.30"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rusqlite = "0.32"
serde = "1"
thiserror = "1"
tokio = "1.39.2"
tokio-util = "0.7.11"

essential-node = { path = "crates/node", version = "0.1.0" }
essential-node-db-sql = { path = "crates/node-db-sql", version = "0.1.0" }
essential-node-db = { path = "crates/node-db", version = "0.1.0" }
essential-relayer = { path = "crates/relayer", version = "0.1.0" }
