[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
repository = "https://github.com/essential-contributions/essential-node"

[workspace.dependencies]
crossbeam = "0.8"
essential-hash = "0.2.0"
essential-sign = "0.2.0"
essential-types = "0.2.0"
futures = "0.3.30"
num_cpus = "1.16"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rusqlite = "0.32"
secp256k1 = { version = "0.29", features = ["rand-std", "hashes-std"] }
serde = "1"
serde_json = "1.0.114"
thiserror = "1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"

essential-node = { path = "crates/node", version = "0.1.0" }
essential-node-db-sql = { path = "crates/node-db-sql", version = "0.1.0" }
essential-node-db = { path = "crates/node-db", version = "0.1.0" }
essential-relayer = { path = "crates/relayer", version = "0.1.0" }
rusqlite-pool = { path = "crates/rusqlite-pool", version = "0.0.0" }
