[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-node"

[workspace.dependencies]
anyhow = "1"
axum = "0.7.7"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
dirs = "5"
essential-check = "0.7.0"
essential-constraint-asm = "0.5.0"
essential-hash = "0.5.0"
essential-sign = "0.5.0"
essential-state-asm = "0.5.0"
essential-types = "0.4.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = "0.1.7"
num_cpus = "1.16"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rusqlite = "0.32"
secp256k1 = { version = "0.30", features = ["rand", "std", "hashes"] }
serde = "1"
serde_json = "1.0.114"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = "0.7.11"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

essential-node = { path = "crates/node", version = "0.7.0" }
essential-node-api = { path = "crates/node-api", version = "0.7.0" }
essential-node-db-sql = { path = "crates/node-db-sql", version = "0.3.0" }
essential-node-db = { path = "crates/node-db", version = "0.3.0" }
essential-node-types = { path = "crates/node-types", version = "0.1.0" }
essential-relayer = { path = "crates/relayer", version = "0.2.0" }
rusqlite-pool = { path = "crates/rusqlite-pool", version = "0.1.1" }
