[package]
name = "essential-node-api"
version = "0.1.0"
description = "API for essential node"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
axum-macros = "0.4" # TODO: Remove - added for debugging handlers
essential-node = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["http2"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
