[package]
name = "essential-node-api"
version = "0.1.0"
description = "API for essential node"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
essential-node = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["http2"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
essential-hash = { workspace = true }
essential-node-api = { workspace = true, features = ["test-utils"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["tracing"]
test-utils = ["essential-node/test-utils"]
tracing = ["dep:tracing", "essential-node/tracing"]
