[package]
name = "essential-node-cli"
version = "0.1.0"
description = "The Essential node CLI"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "essential-node"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
essential-node = { workspace = true }
essential-node-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "essential-node-api/tracing"]
