[package]
name = "essential-node-db"
version = "0.3.0"
description = "The Essential node database"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-node-db-sql = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rusqlite-pool = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
