[package]
name = "essential-node-db"
version = "0.5.0"
description = "The Essential node database"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-node-db-sql = { workspace = true }
essential-node-types = { workspace = true, optional = true, features = ["block-notify"] }
essential-types = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true, optional = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
rusqlite-pool = { workspace = true, optional = true }

[dev-dependencies]
essential-check = { workspace = true }
essential-node-types = { workspace = true }
rusqlite-pool = { workspace = true, features = ["tokio"] }
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
default = ["pool"]
pool = [ "essential-node-types", "essential-node-types/tokio", "num_cpus", "rusqlite-pool", "rusqlite-pool/tokio", "tokio"]

[package.metadata.docs.rs]
all-features = true
