[package]
name = "essential-node-types"
version = "0.1.0"
description = "Core types used within this implementation of the Essential protocol."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
# TODO: Remove this in favour of `essential_hash::hash_bytes` after version update.
sha2 = { workspace = true }
