[package]
name = "essential-node-types"
version = "0.2.0"
description = "Core types used within this implementation of the Essential protocol."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = [ "block-notify" ]
block-notify = [ "tokio" ]
