[package]
name = "essential-node"
version = "0.5.0"
description = "State derivation and validation for Essential protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-check = { workspace = true }
essential-constraint-asm = { workspace = true, optional = true }
essential-hash = { workspace = true }
essential-node-db = { workspace = true }
essential-node-types = { workspace = true }
essential-relayer = { workspace = true }
essential-state-asm = { workspace = true, optional = true }
essential-types = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
rusqlite = { workspace = true }
rusqlite-pool = { workspace = true, features = ["tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
essential-constraint-asm = { workspace = true }
essential-node-api = { path = "../node-api" }
essential-sign = { workspace = true }
essential-state-asm = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
tracing = ["dep:tracing", "essential-relayer/tracing", "essential-check/tracing"]
test-utils = ["dep:essential-constraint-asm", "dep:essential-state-asm", "dep:uuid"]
