[package]
name = "essential-node"
version = "0.8.0"
description = "Validation for Essential protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-check = { workspace = true }
essential-hash = { workspace = true }
essential-node-db = { workspace = true }
essential-node-types = { workspace = true }
essential-relayer = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
essential-node-api = { path = "../node-api" }
essential-sign = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
tracing = ["dep:tracing", "essential-relayer/tracing", "essential-check/tracing"]
test-utils = []
