[package]
authors.workspace = true
description = "Relay blocks and contracts from L1 to node"
edition.workspace = true
homepage.workspace = true
name = "essential-relayer"
repository.workspace = true
version = "0.1.0"

[dependencies]
essential-hash.workspace = true
essential-node-db.workspace = true
essential-types.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "native-tls-alpn"] }
rusqlite.workspace = true
rusqlite-pool = { workspace = true, features = ["tokio"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
essential-node.workspace = true
essential-node-api.workspace = true
essential-sign.workspace = true
secp256k1.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
tracing = ["dep:tracing"]
