[package]
name = "rusqlite-pool"
version = "0.1.0"
description = "A minimal connection pool for rusqlite."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, optional = true }
